# maboroshi

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
maboroshi-cli/: Cargo.toml
maboroshi-cli/src/: main.rs
maboroshi-core/: Cargo.toml
maboroshi-core/src/: ipc.rs  lib.rs
maboroshi-transports/: Cargo.toml
maboroshi-transports/src/: lib.rs  obfs4.rs  plain.rs  webtunnel.rs
