[package]
name = "maboroshi-cli"
version = "0.1.0"
description = "CLI for the maboroshi pluggable transport framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "maboroshi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
maboroshi-core = { path = "../maboroshi-core" }
maboroshi-transports = { path = "../maboroshi-transports" }
clap = { version = "4", features = ["derive"] }
shikumi = "0.1"
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
