[package]
name = "maboroshi-transports"
version = "0.1.0"
description = "Built-in transports for the maboroshi pluggable transport framework"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
maboroshi-core = { path = "../maboroshi-core" }
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
